--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -388,7 +388,27 @@ body {
 .question-number {
   color: #333;
 }
+.accordian-container {
 
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+  display: flex;
+  align-items: left;
+  justify-content: left; /* Add this line to center the content horizontally */
+  flex-direction: column; /* Add this line to stack the elements vertically */
+  text-decoration: none;
+  background-color: white;
+  margin: auto;
+  max-width: 90%; /* Adjust this value to control the maximum width of the white tile box */
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 20px;
+}
 /* Category heading styles */
 .category-heading .accordion-button {
   font-size: 24px;
