--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,18 @@ html {
   background-image: linear-gradient(45deg, #222, #00adb5);
 }
 
+.filter-tag {
+  font-size: 1.2rem;
+  padding: 8px 12px;
+  margin: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.filter-tag:hover {
+  background-color: #007bff;
+  color: white;
+}
 
 
 /* Style the main headings */
