--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,6 +35,37 @@ h2 {
   margin-left: 20px;
 }
 
+#articleModalContent {
+  position: relative;
+  overflow: hidden;
+}
+
+.modal-image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 139, 0.7); /* Dark blue with 70% opacity */
+  z-index: 1;
+}
+
+.modal-content-container {
+  position: relative;
+  z-index: 2;
+  color: white;
+}
+
+#articleModalImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+
 
 /* Style the container */
 .container-home-page {
