--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -44,18 +44,27 @@ h2 {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 139, 0.7); /* Dark blue with 70% opacity */
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
-
+.modal-title {
+  margin-bottom: 1rem;
+}
 .modal-content-container {
   position: relative;
-  z-index: 2;
-  color: white;
 }
-
+.modal-text-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  color: white;
+  z-index: 2;
+}
 #articleModalImage {
   position: absolute;
   top: 0;
