--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -42,6 +42,7 @@ h2 {
 
 .modal-image-overlay {
   position: absolute;
+  display: none; /* Hide the overlay */
   top: 0;
   left: 0;
   width: 100%;
@@ -56,7 +57,6 @@ h2 {
   position: relative;
 }
 .modal-text-container {
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -66,11 +66,9 @@ h2 {
   z-index: 2;
 }
 #articleModalImage {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative; /* Change from absolute to relative */
   width: 100%;
-  height: 100%;
+  height: auto; /* Change from 100% to auto */
   object-fit: cover;
   z-index: 0;
 }
