--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -41,7 +41,7 @@ h2 {
 }
 
 .modal-image-overlay {
-  position: absolute;
+  position: relative;
   display: none; /* Hide the overlay */
   top: 0;
   left: 0;
@@ -57,6 +57,7 @@ h2 {
   position: relative;
 }
 .modal-text-container {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -64,11 +65,14 @@ h2 {
   padding: 1rem;
   color: white;
   z-index: 2;
+  background: rgba(0, 0, 0, 0.5); /* Add a background with opacity to the text container */
 }
 #articleModalImage {
-  position: relative; /* Change from absolute to relative */
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: auto; /* Change from 100% to auto */
+  height: 100%;
   object-fit: cover;
   z-index: 0;
 }
