--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -68,11 +68,9 @@ h2 {
   background: rgba(0, 0, 0, 0.5); /* Add a background with opacity to the text container */
 }
 #articleModalImage {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative; /* Change from absolute to relative */
   width: 100%;
-  height: 100%;
+  height: auto; /* Change from 100% to auto */
   object-fit: cover;
   z-index: 0;
 }
