--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -67,13 +67,30 @@ h2 {
   z-index: 2;
   background: rgba(0, 0, 0, 0.5); /* Add a background with opacity to the text container */
 }
-#articleModalImage {
-  position: relative; /* Change from absolute to relative */
+#articleModalImage::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: auto; /* Change from 100% to auto */
+  height: 100%;
+  background: inherit;
+  filter: blur(5px) brightness(50%);
+  z-index: -1;
+}
+
+#articleModalImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   z-index: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
 
 
 /* Style the container */
