--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -57,7 +57,7 @@ h2 {
   position: relative;
 }
 .modal-text-container {
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   width: 100%;
