--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -34,61 +34,39 @@ h2 {
   font-size: 1.2rem;
   margin-left: 20px;
 }
-
 #articleModalContent {
   position: relative;
   overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .modal-image-overlay {
-  position: relative;
   display: none; /* Hide the overlay */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1;
 }
+
 .modal-title {
   margin-bottom: 1rem;
 }
+
 .modal-content-container {
   position: relative;
 }
+
 .modal-text-container {
-  /* position: absolute; */
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   padding: 1rem;
   color: white;
-  z-index: 2;
+  z-index: 1;
   background: rgba(0, 0, 0, 0.5); /* Add a background with opacity to the text container */
-}
-#articleModalImage::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: inherit;
-  filter: blur(5px) brightness(50%);
-  z-index: -1;
 }
 
 #articleModalImage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: 0;
-  background-repeat: no-repeat;
-  background-size: cover;
+  display: none;
 }
 
 
