--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -60,12 +60,20 @@ h2 {
   min-height: 60vh; /* Adjust the value as desired */
   max-height: calc(100% - 120px);
   overflow-y: auto;
+  flex: 1 1 auto;
 }
 .modal-dialog {
+  max-width: 90%;
   max-height: 90vh;
+  margin: 1.75rem auto;
 }
 .modal-content-container {
   position: relative;
+}
+.modal-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal-text-container {
