--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -50,7 +50,23 @@ h2 {
 }
 
 .modal-image-overlay {
-  display: none; /* Hide the overlay */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  visibility: hidden;
+}
+
+#articleModalImage:hover + .modal-image-overlay {
+  visibility: visible;
 }
 
 .modal-title {
@@ -77,12 +93,14 @@ h2 {
 }
 
 .modal-text-container {
-  position: relative; /* Change from absolute to relative */
-  padding: 1rem;
-  color: rgb(43, 41, 41);
-  z-index: 1;
+  padding: 20px;
 }
-
+.modal-date-tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  margin-bottom: 10px;
+}
 #articleContent {
   position: absolute;
   top: 0;
