--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -137,7 +137,7 @@ h2 {
 #categories-container {
   display: flex;
   flex-direction: column;
-  align-items: left;
+  /* align-items: left; */
   gap: 20px;
   padding: 20px;
 }
@@ -195,7 +195,7 @@ h2 {
   background-color: rgba(255, 255, 255, 0.1); /* Adjust the opacity value */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  position: top;
+  /* position: top; */
   top: 0;
   width: 100%;
   z-index: 1000;
@@ -386,8 +386,8 @@ body {
 
 .card-container {
   padding: 50px;
-  border-left: none
-  border-right: none
+  border-left: none;
+  border-right: none;
 }
 
 
@@ -500,7 +500,7 @@ body {
   cursor: pointer;
   transition: transform 0.2s ease-in-out;
   display: flex;
-  align-items: left;
+  /* align-items: left; */
   justify-content: left; /* Add this line to center the content horizontally */
   flex-direction: column; /* Add this line to stack the elements vertically */
   text-decoration: none;
@@ -552,7 +552,7 @@ body {
 .accordion-body p {
   /* Add your styles here */
   font-size: 14px;
-  font-weight: none;
+  /* font-weight: none; */
   border: none;
   background-color: transparent;
   padding-left: 40px; /* Increase the value to indent the text more */
@@ -561,7 +561,7 @@ body {
 .accordion-body a {
   /* Add your styles here */
   font-size: 14px;
-  font-weight: none;
+  /* font-weight: none; */
   border: none;
   background-color: transparent;
   padding-left: 20px;
