--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -518,7 +518,7 @@ body {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 20px;
+  padding: 10px;
 }
 /* Category heading styles */
 .category-heading .accordion-button {
@@ -541,7 +541,7 @@ body {
 /* Question heading styles */
 .question-heading .accordion-button {
   font-size: 18px;
-  font-weight: normal;
+  font-weight: bold;
   border: none;
   background-color: transparent;
   padding-left: 10px;
