--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -514,11 +514,11 @@ body {
   margin: auto;
   max-width: 90%; /* Adjust this value to control the maximum width of the white tile box */
   background-color: white;
-  border-radius: 10px;
+  border-radius: 2px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 10px;
+
 }
 /* Category heading styles */
 .category-heading .accordion-button {
@@ -535,7 +535,7 @@ body {
   font-weight: bold;
   border: none;
   background-color: transparent;
-  padding-left: 0px;
+  padding-left: 20px;
 }
 
 /* Question heading styles */
@@ -544,16 +544,16 @@ body {
   font-weight: bold;
   border: none;
   background-color: transparent;
-  padding-left: 0px;
+  padding-left: 20px;
   text-align: left;
 }
 
 .question-heading .accordion-button.collapsed {
   font-size: 18px;
-  font-weight: normal;
+  font-weight: bold;
   border: none;
   background-color: transparent;
-  padding-left: 0px;
+  padding-left: 20px;
 }
 .accordion-body p {
   /* Add your styles here */
