--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -32,12 +32,12 @@ h2 {
   font-size: 1.2rem;
   margin-left: 20px;
 }
-#articleModalContent {
+/* #articleModalContent {
   position: relative;
   overflow: hidden;
-}
+} */
 
-.modal-image-overlay {
+/* .modal-image-overlay {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -53,7 +53,7 @@ h2 {
   text-shadow: 2px 2px #000;
   text-align: center;
 
-}
+} */
 
 .modal-title {
   margin-bottom: 1rem;
