--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -189,6 +189,12 @@ h2 {
   z-index: 1000;
 }
 
+#category-select {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4 5"><path fill="%23000000" d="M2 0L0 2h4L2 0zm0 5L0 3h4l-2 2z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right .7em top 50%, 0 0;
+  background-size: .65em auto, 100%;
+}
 /* Style the header icon and text container */
 .header-content {
   display: flex;
